aws/RouteTables-sa-east-1.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true, 
     "RouteTableAssociationId": "rtbassoc-1180e674", 
     "RouteTableId": "rtb-f6dc5793"
    }
   ], 
   "PropagatingVgws": [], 
   "RouteTableId": "rtb-f6dc5793", 
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16", 
     "GatewayId": "local", 
     "Origin": "CreateRouteTable", 
     "State": "active"
    }, 
    {
     "DestinationCidrBlock": "0.0.0.0/0", 
     "GatewayId": "igw-29fb324c", 
     "Origin": "CreateRoute", 
     "State": "active"
    }
   ], 
   "Tags": [], 
   "VpcId": "vpc-dff0b8ba"
  }
 ]
}
